Update Settings Page

--- a/smmg_coupon.links.menu.yml
+++ b/smmg_coupon.links.menu.yml
@@ -5,4 +5,5 @@ smmg_coupon.settings_form:
   title: 'Coupon Settings'
   description: 'Configure default coupon settings'
   route_name: smmg_coupon.settings
-  parent: 'system.admin_config_content'
+  parent:  small_messages.group.admin
+  weight: 30
