--- a/smmg_coupon.info.yml
+++ b/smmg_coupon.info.yml
@@ -2,7 +2,7 @@ name: 'Small Messages - Coupon'
 type: module
 description: 'Coupon Plugin for Small Messages'
 core: 8.x
-package: 'Messages'
+package: 'Small Messages'
 dependencies:
   - drupal:node
   - small_messages
