--- a/smmg_coupon.info.yml
+++ b/smmg_coupon.info.yml
@@ -11,8 +11,7 @@ dependencies:
   - inline_entity_form
   - auto_entitylabel
 
-path: modules
 project: smmg_coupon
 version: 1.0.0
 'interface translation project': smmg_coupon
-'interface translation server pattern': %path/%project/translations/%project-%version.%language.po
+'interface translation server pattern': modules/%project/translations/%project-%version.%language.po
