remove hide_revision_field

--- a/smmg_coupon.routing.yml
+++ b/smmg_coupon.routing.yml
@@ -12,7 +12,9 @@ smmg_coupon.settings:
 
 smmg_coupon.order_list:
   path: '/admin/coupon-order-list'
-
+  defaults:
+  requirements:
+    _permission: 'access content'
 
 # Coupon
 # ---------------------------------
