--- a/config/optional/core.entity_view_display.node.coupon_order.default.yml
+++ b/config/optional/core.entity_view_display.node.coupon_order.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.coupon_order.body
     - field.field.node.coupon_order.field_city
+    - field.field.node.coupon_order.field_coupon_group
     - field.field.node.coupon_order.field_coupon_unit
     - field.field.node.coupon_order.field_email
     - field.field.node.coupon_order.field_first_name
@@ -40,6 +41,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_coupon_group:
+    weight: 117
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_coupon_unit:
     weight: 115
