--- a/smmg_coupon.info.yml
+++ b/smmg_coupon.info.yml
@@ -14,4 +14,4 @@ dependencies:
 project: smmg_coupon
 version: 8.x-1.0.0
 'interface translation project': smmg_coupon
-'interface translation server pattern': custom/modules/%project/translations/%project-%version.%language.po
+'interface translation server pattern': modules/custom/%project/translations/%project-%version.%language.po
