--- a/smmg_coupon.info.yml
+++ b/smmg_coupon.info.yml
@@ -2,6 +2,7 @@ name: 'Small Messages - Coupon'
 type: module
 description: 'Coupon Plugin for Small Messages'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Small Messages'
 dependencies:
   - drupal:node
