--- a/config/optional/core.entity_view_display.node.coupon_order.default.yml
+++ b/config/optional/core.entity_view_display.node.coupon_order.default.yml
@@ -15,7 +15,7 @@ dependencies:
     - field.field.node.coupon_order.field_smmg_accounting
     - field.field.node.coupon_order.field_smmg_order_status
     - field.field.node.coupon_order.field_smmg_origin
-    - field.field.node.coupon_order.field_smmg_token
+    - field.field.node.coupon_order.field_mollo_token
     - field.field.node.coupon_order.field_street_and_number
     - field.field.node.coupon_order.field_zip_code
     - node.type.coupon_order
@@ -121,7 +121,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_smmg_token:
+  field_mollo_token:
     weight: 112
     label: above
     settings:
